[fix] make sure cam stop/start btn text not squished

--- a/src/c++/UI/frontend/static/stylesheets/video.css
+++ b/src/c++/UI/frontend/static/stylesheets/video.css
@@ -25,4 +25,5 @@
 
 .cam-btns {
     font-size:24px;
+    width: fit-content;
 }
